--- a/web/css/default.css
+++ b/web/css/default.css
@@ -72,15 +72,19 @@ img#iconUsuario{
 
 /**********Aside*************/
 
+nav[role="navegator"]{
+    border-right: 1px solid black;
+}
+
 #lateral{
     width: 200px;
     text-align: center;
     display:inline-block;
     height: 100%;
-    border-right: 1px solid black;
 }
 
 #lateral>nav>ul>li{
+    position: relative;
     padding:25px 10px;
     border-bottom: 1px solid black;
 }
@@ -88,12 +92,60 @@ img#iconUsuario{
 /***** Main -- Articulos ******/
 
 main{
-    display:none;
-    width: 80%;
-    
+    float:right;
+    width: 75vw; 
+    overflow:hidden;
+}
+
+main article{
+    float:left;
+    margin-left:10px;
+    width: 20%;
 }
 
 /* Pruebas */
 
-ul ul {display:none;}
+ul ul {
+    position: absolute;
+    top: -50px;
+    left: 0px;
+    opacity: 0;
+    text-align: center;
+    width: 130%;
+    border-left: 1px solid;
+    border-top: 1px solid;
+    border-right: 1px solid;
+    z-index:-20;
+}
+
+ul ul:last-child{
+    top:0px;
+}
+
+ul ul:last-child>li{
+    top:0px;
+}
+
+ul ul>li{
+    width: 100%;
+    border: none;
+}
+
+ul ul>li>a{
+    display: block;
+    padding: 7px 0px;
+
+}
+
+nav>ul>li:hover>ul{
+    transition: all 0.5s linear 0s;
+    left:100%;
+    opacity:1; 
+    z-index: 20;
+}
+
+nav>ul>li:hover>ul>li{
+    transition: all 0.5s linear 0s;
+    border:1px solid black;
+}
 
